# STM32_Ethercat_AGV

./: .gitignore  AGV_DESIGN.md  AGV_REUSE_ANALYSIS.md  CAMERA_TRACKING_DESIGN.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEBUG_DESIGN.md  DEBUG_STATUS.md  ESP32_CAN_AGV_PLAN.md  FLASH_GUIDE.md  GPS_INTEGRATION.md  IO_BASEBOARD_DESIGN.md  JSON_COMMAND_REFERENCE.md  LINUX_DEPLOY.md  TEACHING_GUIDE.md  WSL2_SETUP_GUIDE.md  agv-nav.service  agv-ros.service  agv-slam.service  build.bat  build.sh  changelog.txt  gcc-arm-none-eabi.cmake  readme.md  setup_ros2.sh
.claude/: settings.json  settings.local.json
.flash_state/: appli_last_flash.json
Appli/: CMakeLists.txt  stm32h753zi_flash.ld  stm32h7rsxx_RAMxspi1_ROMxspi2.ld
Appli/Core/Inc/: FreeRTOSConfig.h  alarm_manager.h  axis_config.h  axis_types.h  cycle_logger.h  interlock_manager.h  interpolator.h  io_handler.h  main.h  press_state_machine.h  robot_config.h  settings_persistence.h  soem_port.h  stm32_extmem_conf.h  stm32h7rsxx_hal_conf.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  uart_protocol.h  ui_flash_storage.h
Appli/Core/Src/: alarm_manager.c  axis_config.c  freertos.c  interlock_manager.c  interpolator.c  io_handler.c  main.c  maint_counter.c  press_state_machine.c  recipe_manager.c  settings_persistence.c  soem_port.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  syscalls.c  uart_protocol.c  ui_flash_storage.c  user_auth.c
Appli/TouchGFX/: MyApplication_4.touchgfx
Appli/TouchGFX/assets/texts/: texts.xml
Appli/TouchGFX/gui/include/gui/containers/: KeyBoard.hpp
Appli/TouchGFX/gui/include/gui/mainpage_screen/: MainPagePresenter.hpp  MainPageView.hpp
Appli/TouchGFX/gui/include/gui/manualpage_screen/: ManualPagePresenter.hpp  ManualPageView.hpp
Appli/TouchGFX/gui/include/gui/model/: Model.hpp
Appli/TouchGFX/gui/include/gui/parameterpage_screen/: ParameterPagePresenter.hpp  ParameterPageView.hpp
Appli/TouchGFX/gui/include/gui/programpage_screen/: ProgramPagePresenter.hpp  ProgramPageView.hpp
Appli/TouchGFX/gui/src/containers/: KeyBoard.cpp
Appli/TouchGFX/gui/src/mainpage_screen/: MainPagePresenter.cpp  MainPageView.cpp
Appli/TouchGFX/gui/src/manualpage_screen/: ManualPagePresenter.cpp  ManualPageView.cpp
Appli/TouchGFX/gui/src/model/: Model.cpp
Appli/TouchGFX/gui/src/parameterpage_screen/: ParameterPagePresenter.cpp  ParameterPageView.cpp
Appli/TouchGFX/gui/src/programpage_screen/: ProgramPagePresenter.cpp  ProgramPageView.cpp
Boot/: stm32h7s7xx_flash.ld
ESP32/agv_firmware/: platformio.ini
ESP32/agv_firmware/include/: agv_protocol.h  nvs_params.h  odometry.h  pin_config.h  rs485_slip.h  vesc_can.h
ESP32/agv_firmware/src/: agv_protocol.cpp  main.cpp  nvs_params.cpp  odometry.cpp  rs485_slip.cpp  vesc_can.cpp
PC_GUI/UartStudio/: LcdCloneForm.cs  MainForm.cs  Program.cs  UartStudio.csproj
PC_GUI/UartWeb/: Program.cs  UartWeb.csproj  press-params.json  program.json
PC_GUI/UartWeb/Models/: ApiModels.cs
PC_GUI/UartWeb/Services/: AnomalyDetector.cs  GraphDb.cs  UartGateway.cs
PC_GUI/UartWeb/wwwroot/: app.js  index.html  styles.css
PC_GUI/bridge/: Dockerfile.build  bridge.py  build_docker.bat  build_linux.sh  editor.html  index.html  json_interpreter.py  package_linux.sh  packet_defs.py  requirements.txt  robot_bridge.spec  setup_d435i_imu.sh  slip_codec.py  stm32_bridge_node.py
STM32CubeIDE/Appli/: .project
backup/phase1_20260512_1540/: Appli_CMakeLists.txt  Appli_Core_Src_interlock_manager.c  Appli_Core_Src_main.c  Appli_Core_Src_press_state_machine.c
backup/phase2_20260512_1557/: SERVO_PRESS_IMPLEMENTATION_GUIDE.md
backup/phase2_20260512_1557/Appli/: CMakeLists.txt
backup/phase2_20260512_1557/Appli/Core/Inc/: press_state_machine.h  recipe_manager.h
backup/phase2_20260512_1557/Appli/Core/Src/: alarm_manager.c  cycle_logger.c  main.c  recipe_manager.c
backup/phase2_20260512_1557/PC_GUI/UartWeb/Models/: ApiModels.cs
backup/phase3_20260512_1607/: SERVO_PRESS_IMPLEMENTATION_GUIDE.md
backup/phase3_20260512_1607/PC_GUI/UartWeb/: Program.cs
backup/phase4_20260512_1613/: SERVO_PRESS_IMPLEMENTATION_GUIDE.md
backup/phase4_20260512_1613/Appli/: CMakeLists.txt
backup/phase4_20260512_1613/PC_GUI/UartWeb/: Program.cs
backup/phase5_20260513_1518/: PROGRESS.md
backup/phase5_20260513_1518/PC_GUI/UartWeb/: Program.cs
blog_posts/: post_01_introduction.md  post_02_hardware.md  post_03_ethercat_fundamentals.md  post_04_soem_integration.md  post_05_cia402_state_machine.md  post_06_csp_mode_ramp.md  post_07_multi_axis_api.md  post_08_jog_operation.md  post_09_uart_protocol.md  post_10_python_bridge.md  post_11_web_hmi.md  post_12_gcode_g00.md  post_13_gcode_g01.md  post_14_gcode_arc.md  post_15_flash_storage.md  post_16_soft_limits.md  post_17_auto_execution.md  post_18_bug_init_order.md  post_19_bug_arc_clamp.md  post_20_bug_arc_sweep.md
code/: program1.nc  test.rt
ros2_ws/: README.md  fastdds_no_shm.xml  start_gps.sh  start_nav.sh  start_ros.sh  start_slam.sh
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/agv_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/agv_bringup/agv_bringup/: gps_config.py  gps_driver_node.py  obstacle_classifier.py  row_follower.py  stm32_bridge_node.py  task_scheduler.py
ros2_ws/src/agv_bringup/config/: ekf.yaml  ekf_gps.yaml  ekf_odom_only.yaml  geofence.yaml  mission.yaml  nav2_params.yaml  navsat_transform.yaml  rtabmap_params.yaml
ros2_ws/src/agv_bringup/launch/: full_nav.launch.py  full_slam.launch.py  gps.launch.py  hardware.launch.py  localization.launch.py  nav2.launch.py  obstacle.launch.py  row_follow.launch.py  slam.launch.py
ros2_ws/src/agv_description/: package.xml  setup.py
ros2_ws/src/agv_description/launch/: description.launch.py
ros2_ws/src/agv_description/urdf/: agv.urdf.xacro
tools/: build.ps1  build_and_flash.ps1  button_verify.ps1  button_verify_report.txt  ssh_setup.py
tools/wsl_setup/: 01_install_wsl2.ps1  02_setup_ros2.sh  03_build_workspace.sh  04_attach_usb.ps1  05_verify.sh  setup_env.sh
(+34 files in other folders)
