<?xml version="1.0"?>
<package format="3">
  <name>agv_bringup</name>
  <version>2.0.0</version>
  <description>Launch files and configuration for AGV RTAB-Map + Nav2</description>
  <maintainer email="agv@local">AGV Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>agv_description</depend>
  <depend>nav2_bringup</depend>
  <depend>rtabmap_ros</depend>
  <depend>realsense2_camera</depend>
  <depend>robot_state_publisher</depend>
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
